--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -5,13 +5,13 @@
   </title>
   <style type="text/css">
     .body { margin-top:0px; margin-left:2ex; }
-     .menuDiv { width:78ex; height: 24px; }
+     .menuDiv { position:relative; top:0em; width:78ex; height: 24px; z-index:999; }
       .search { position:relative; top:-6px; }
      .outerDiv { position:relative; top:-1ex; height:100%; width:100% }
-      .svgDiv   { position:absolute; top:".$svgpos."px; left:-1ex; z-index:998; }
+      .svgDiv   { position:absolute; top:0em; left:-1ex; z-index:997; }
       .imgDiv   { position:absolute; top:0em; }
       .imgCenter{ position:absolute; top:0em; text-align:center; margin:0 auto; width:78ex; }
-      .content  { position:absolute; top:0em; left:0ex; z-index:999; }
+      .content  { position:absolute; top:0em; left:0ex; z-index:998; }
       .content > div > pre  { margin:0 }
       .icon {
         width: 32px;
@@ -35,14 +35,17 @@
   </style>
 
   <script type="text/javascript">
-    var stdoutBuffer = "";
+    var stdout = [''];
     var Module = {
         preRun: function() {
-            function stdout(code) {
-                stdoutBuffer += String.fromCharCode(code);
+            function stdoutHandler(code) {
+                stdout[stdout.length-1] += String.fromCharCode(code);
+                if (code == '\n'.charCodeAt(0)) {
+                    stdout.push('');
+                }
             }
 
-            FS.init(null, stdout, null);
+            FS.init(null, stdoutHandler, null);
         }
     };
   </script>
@@ -84,13 +87,11 @@
 
     // decompress the .HYP file node (idx)
     function dehyp(filename, idx) {
-        stdoutBuffer = '';
+        stdout = [''];
         Module.callMain(['cache/'+filename, ''+idx]);
-        var s = stdoutBuffer;
 
         console.log('dehyp', idx);
-        // s = s.replace(/<!--(\/?a.*?)-->/g, '<$1>');
-        s = s.replace(/<!--\/?refs.*?"(.*?)"-->/g, function(m, refs) {
+        stdout.join('').replace(/<!--\/?refs.*?"(.*?)"-->/g, function(m, refs) {
             // update the menu icon indexes
             refs.split(/&/).map(function(arg) {
                 var name_value = arg.split(/=/);
@@ -98,10 +99,7 @@
             });
             return '';
         });
-        // s = s.replace(/<a\s+href="(.*?)"/g, '<a href="#$1"');
-        // s = s.replace(/<!--(.*?)-->/g, '<$1>');
-        document.getElementById('output').innerHTML = htmllify(s);
-        return s;
+        document.getElementById('output').innerHTML = htmllify(stdout);
     }
 
     // link navigation
@@ -133,25 +131,26 @@
       </form>
   </div>
 
-  <div class="svgDiv">
-      <!-- TODO: update the width/height of the SVG -->
-      <svg:svg version="1.1" baseProfile="tiny" width="10ex" height="10em">
-          <svg:defs>
-              <svg:marker id="arrowbeg" viewBox="0 0 10 20" refX="2" refY="10" markerUnits="strokeWidth" markerWidth="15" markerHeight="15" orient="auto">
-                  <svg:path d="M 0 10 L 10 0 M 0 10 L 10 20" fill="black" stroke="black"/>
-              </svg:marker>
-              <svg:marker id="arrowend" viewBox="0 0 10 20" refX="8" refY="10" markerUnits="strokeWidth" markerWidth="15" markerHeight="15" orient="auto">
-                  <svg:path d="M 10 10 L 0 0 M 10 10 L 0 20" fill="black" stroke="black"/>
-              </svg:marker>
-          </svg:defs>
-          <svg:g stroke="black">
-              <!-- TODO: generated graphics -->
-          </svg:g>
-      </svg:svg>
-  </div>
+  <div class="outerDiv">
+      <div id="svgDiv" class="svgDiv">
+          <svg id="svg" version="1.1" baseProfile="tiny" width="10ex" height="10em" xmlns="http://www.w3.org/2000/svg">
+              <defs>
+                  <marker id="arrowbeg" viewBox="0 0 10 20" refX="2" refY="10" markerUnits="strokeWidth" markerWidth="15" markerHeight="15" orient="auto">
+                      <path d="M 0 10 L 10 0 M 0 10 L 10 20" fill="black" stroke="black"/>
+                  </marker>
+                  <marker id="arrowend" viewBox="0 0 10 20" refX="8" refY="10" markerUnits="strokeWidth" markerWidth="15" markerHeight="15" orient="auto">
+                      <path d="M 10 10 L 0 0 M 10 10 L 0 20" fill="black" stroke="black"/>
+                  </marker>
+              </defs>
+              <g stroke="black" id="graphics">
+                  <!-- generated graphics -->
+              </g>
+          </svg>
+      </div>
 
-      <pre id="output"></pre>
-  <div class="content">
+      <div class="content">
+          <pre id="output"></pre>
+      </div>
   </div>
 </body>
 </html>
