--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -153,6 +153,10 @@
           <pre id="output"></pre>
       </div>
   </div>
+
+  <script type="text/javascript">
+    hyp_width = document.getElementById('width').getBoundingClientRect().width - 1;
+  </script>
 </body>
 </html>
 
