--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -53,8 +53,29 @@
 
         FS.init(null, stdoutHandler, null);
 
-        fetchUrl();
+        initIDBFS(function() {
+            console.log(FS.readdir('/file:/'));
+
+            fetchUrl();
+        });
     };
+
+    function initIDBFS(cb) {
+        //create your directory where we keep our persistent data
+        FS.mkdir('/file:');
+
+        //mount persistent directory as IDBFS
+        FS.mount(IDBFS,{},'/file:');
+
+        Module.syncdone = 0;
+
+        FS.syncfs(true, function(err) {
+            assert(!err);
+            Module.syncdone = 1;
+
+            cb();
+        });
+    }
 
     function fetchUrl() {
         let search = location.search.substring(1);
@@ -63,17 +84,21 @@
             return { ..._args, [pair[0]]: decodeURIComponent(pair[1]) };
         }, {});
 
-        if (!args.url) return;
+        if (args.file) {
+            hypfile = `/file:/${args.file}`;
+            return open();
+        }
+        if (args.url) {
+            return fetch('https://humanly.herokuapp.com/cors/'+args.url)
+                .then(r => r.arrayBuffer())
+                .then(buffer => {
+                    let filename = args.url.split('/').pop();
+                    FS.createDataFile('/', filename, new Uint8Array(buffer), true, false);
+                    hypfile = filename;
 
-        fetch('https://humanly.herokuapp.com/cors/'+args.url)
-        .then(r => r.arrayBuffer())
-        .then(buffer => {
-            let filename = args.url.split('/').pop();
-            FS.createDataFile('/', filename, new Uint8Array(buffer), true, false);
-            hypfile = filename;
-
-            open();
-        });
+                    open();
+                });
+        }
     }
 
     // decompress the .HYP file node (idx)
@@ -116,11 +141,26 @@
             var reader = new FileReader();
             ret = [];
             reader.onload = function(e) {
-                // create emscripten filesystem file entry
-                FS.createDataFile('/', file.name, e.target.result, true, false);
-                hypfile = file.name;
+                hypfile = `/file:/${file.name}`;
+                try {
+                    FS.createDataFile('/file:', file.name, e.target.result, true, false);
+                } catch(e) {
+                    // file already present
+                }
+                FS.syncfs(false, function(err) {
+                    assert(!err);
+                    Module.syncdone = 1;
 
-                hypview(hypfile, 0, 0);
+                    if ('URLSearchParams' in window) {
+                        var searchParams = new URLSearchParams(window.location.search)
+                        searchParams.set("file", file.name);
+                        var href = window.location.pathname + '?' + searchParams.toString();
+                        history.pushState(null, '', href);
+                    }
+
+                    hypview(hypfile, 0, 0);
+                });
+
             };
             reader.onerror = function(stuff) {
                 console.log("error", stuff, stuff.toString(), stuff.getMessage && stuff.getMessage());
@@ -149,10 +189,10 @@
         <a id="ref_next" href="#index=0" accesskey="n" rel="next"><div class="icon"></div></a>
         <a id="ref_idx"  href="#index=0" accesskey="z" rel="index"><div class="icon"></div></a>
         &nbsp;&nbsp;&nbsp;
-        <!--
-        <a href="../libhyp" accesskey="o"><img src="image/iload.png" border="0"/></a>
-        -->
-        <input id="ref_file" type="file" multiple onchange="handle_files(this.files)">
+        <span>
+            <input id="ref_file_input" type="file" multiple onchange="handle_files(this.files)" style="opacity:0; position:absolute;"/>
+            <label id="ref_file" for="ref_file_input"><img src="image/iload.png" border="0"/></label>
+        </span>
 
         <!--
         &nbsp;&nbsp;&nbsp;
