--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -7,7 +7,7 @@
   <style type="text/css">
     .body { margin-top:0px; margin-left:2ex; }
      .menu { position:fixed; background-color:#ffffff; padding-top: 2px; top:0em; width:78ex; height: 26px; z-index:999; }
-      .search { position:relative; top:-6px; }
+      .search { position:relative; top:-6px; width:40ex; }
      .node { position:relative; margin-top:32px; height:100%; width:100% }
      .anchor {                  padding-top:32px; margin-top:-32px; }
       .gfx { position:absolute; top:0em; left:-1ex; z-index:997; }
@@ -190,6 +190,11 @@
         hypview(hypfile, index && index[1], lineNumber && lineNumber[1]);
     }
 
+    function grephyp(q) {
+        var query = document.getElementById('search').value;
+        hypview(hypfile, 'search:'+query);
+    }
+
     // resync SVG size
     window.onresize = resize;
 
@@ -199,7 +204,7 @@
 </head>
 <body>
   <div class="menu">
-      <form action="" method="GET">
+      <form action="javascript:;" onsubmit="grephyp(this)">
         <a id="ref_back" href="javascript: history.go(-1)"><div class="icon"></div></a>
         <a id="ref_prev" href="#index=0" accesskey="p" rel="prev"><div class="icon"></div></a>
 
@@ -208,14 +213,11 @@
         <a id="ref_idx"  href="#index=0" accesskey="z" rel="index"><div class="icon"></div></a>
         &nbsp;&nbsp;&nbsp;
         <span>
-            <input id="ref_file_input" type="file" multiple onchange="handle_files(this.files)" style="opacity:0; position:absolute;"/>
+            <input id="ref_file_input" type="file" multiple onchange="handle_files(this.files)" style="opacity:0; position:absolute; width:1px"/>
             <label id="ref_file" for="ref_file_input"><img src="image/iload.png" border="0"/></label>
         </span>
-
-        <!--
         &nbsp;&nbsp;&nbsp;
-        <input class="search" accesskey="s" type="text" name="q" width="10" value="$form{q}"/>
-        -->
+        <input id="search" class="search" accesskey="s" type="text" placeholder='Search...' name="q" width="40" value=""/>
       </form>
   </div>
 
