--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -150,37 +150,40 @@
     }
 
     // FileReader (allows local file access)
+    function handle_file(file) {
+        var reader = new FileReader();
+        ret = [];
+        reader.onload = function(e) {
+            var hyppathname = `/file:/${file.name}`;
+            try {
+                FS.createDataFile('/file:', file.name, e.target.result, true, false);
+            } catch(e) {
+                // file already present
+            }
+            FS.syncfs(false, function(err) {
+                assert(!err);
+                Module.syncdone = 1;
+
+                if ('URLSearchParams' in window) {
+                    var searchParams = new URLSearchParams(window.location.search)
+                    searchParams.set("file", file.name);
+                    var href = window.location.pathname + '?' + searchParams.toString();
+                    history.pushState(null, '', href);
+                }
+
+                hypview(hyppathname, 0, 0);
+            });
+
+        };
+        reader.onerror = function(stuff) {
+            console.log("error", stuff, stuff.toString(), stuff.getMessage && stuff.getMessage());
+        };
+        reader.readAsBinaryString(file); //readAsdataURL
+    }
+
     function handle_files(files) {
         for (i = 0; i < files.length; i++) {
-            var file = files[i];
-            var reader = new FileReader();
-            ret = [];
-            reader.onload = function(e) {
-                hypfile = `/file:/${file.name}`;
-                try {
-                    FS.createDataFile('/file:', file.name, e.target.result, true, false);
-                } catch(e) {
-                    // file already present
-                }
-                FS.syncfs(false, function(err) {
-                    assert(!err);
-                    Module.syncdone = 1;
-
-                    if ('URLSearchParams' in window) {
-                        var searchParams = new URLSearchParams(window.location.search)
-                        searchParams.set("file", file.name);
-                        var href = window.location.pathname + '?' + searchParams.toString();
-                        history.pushState(null, '', href);
-                    }
-
-                    hypview(hypfile, 0, 0);
-                });
-
-            };
-            reader.onerror = function(stuff) {
-                console.log("error", stuff, stuff.toString(), stuff.getMessage && stuff.getMessage());
-            };
-            reader.readAsBinaryString(file); //readAsdataURL
+            handle_file(files[i]);
         }
     }
 
