fix(hypview.js): add github link

--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -8,7 +8,7 @@
   </title>
   <style type="text/css">
     .body { margin-top:0px; margin-left:2ex; }
-     .menu { position:fixed; background-color:#ffffff; padding-top: 2px; top:0em; width:78ex; height: 26px; z-index:999; }
+     .menu { position:fixed; background-color:#ffffff; padding-top: 2px; top:0em; width:80ex; height: 26px; z-index:999; }
       .search { position:relative; top:-6px; width:40ex; }
      .node { position:relative; margin-top:32px; height:100%; width:100% }
      .anchor {                  padding-top:32px; margin-top:-32px; }
@@ -29,6 +29,7 @@
     #ref_idx  .icon { background: url('image/iindex.png') left top no-repeat; }
 
     #ref_file { vertical-align: top; }
+    #ref_github { vertical-align: top; }
 
     ::-webkit-file-upload-button {
         -webkit-appearance: square-button;
@@ -328,6 +329,8 @@
         </span>
         &nbsp;&nbsp;&nbsp;
         <input id="search" class="search" accesskey="s" type="text" placeholder='Search...' name="q" width="40" value=""/>
+        &nbsp;&nbsp;&nbsp;
+        <a id="ref_github"  href="https://github.com/opichals/hypview"><img src="image/github.png" border="0" width="24px"/></a>
       </form>
   </div>
 
