--- a/tools/hypviewcgi/index.html
+++ b/tools/hypviewcgi/index.html
@@ -63,7 +63,8 @@
   <script type="text/javascript">
     var launchHyp;
     var hypfile = 'tos.hyp';
-    var hypenc = Array(128).fill().map((element, index) => String.fromCharCode(index)).join('');
+    var identityenc = Array(128).fill().map((element, index) => String.fromCharCode(index+128)).join('');
+    var hypenc = identityenc;
 
     if ('launchQueue' in window) {
         launchQueue.setConsumer(launchParams => {
@@ -201,7 +202,7 @@
 
         // links of only file loaded hyps (?file=xyz.hyp) are locked to a file (not url ones)
         let file = filename.match(/\/file:\/(.*)/);
-        let href = file ? '?' + Object.entries({ file: file[1], enc: encodeURIComponent(hypenc) })
+        let href = file ? '?' + Object.entries({ file: file[1], enc: hypenc != identityenc && encodeURIComponent(hypenc) })
             .filter(([k, v]) => !!v)
             .map(([k, v]) => k+'='+v)
             .join('&') : '';
